# omniperf

./: .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.github/workflows/: daily-staging-sync.yml  docs.yml  formatting.yml  mi-rhel9.yml  packaging.yml  rhel-8.yml  tarball.yml  ubuntu-jammy.yml  weekly-mainline-sync.yml
cmake/: Dockerfile  rocm_install.sh  rocprofcompute.lua.in
docker/: Dockerfile.opensuse  Dockerfile.rhel  Dockerfile.ubuntu  Dockerfile.ubuntu.ci  build-docker-ci.sh  build-docker.sh
docs/: conf.py  index.rst  what-is-rocprof-compute.rst
docs/conceptual/: command-processor.rst  compute-unit.rst  definitions.rst  l2-cache.rst  local-data-share.rst  performance-model.rst  pipeline-descriptions.rst  pipeline-metrics.rst  references.rst  shader-engine.rst  system-speed-of-light.rst  vector-l1-cache.rst
docs/how-to/: use.rst
docs/install/: core-install.rst  grafana-setup.rst
grafana/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
sample/: fabric.hip  ipc.hip  stack.hip  vcopy.cpp
src/: README.md  argparser.py  config.py  rocprof-compute  rocprof_compute_base.py  roofline.py
tests/: generate_test_analyze_workloads.py  generate_workloads.sh  test_analyze_commands.py  test_analyze_workloads.py  test_import_workloads.py  test_profile_general.py  test_utils.py
utils/: build.sh  update_license.py  ver_check.py
(+244 files in other folders)
